@@ -2,6 +2,8 @@ lldpd (0.9.9)
   * Changes:
     + lldpcli can now display local interfaces with LLDP data sent on
       each of them ("show interfaces").
+  * Fix:
+    + Don't remove interfaces when they are released from a bridge.
 
 lldpd (0.9.8)
   * Changes:
